--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 #                                                 /____/
 #
 # Title of your website
-title: 'Eric'
+title: 'Distance sampling online course'
 
 # The slogan describes your website and is used on homepage in <title> and other important places
 slogan: 'Online course website'
@@ -21,12 +21,12 @@ credits: '<p>Created with &hearts; by <a href="http://phlow.de/">Phlow</a> with 
 
 # Main author of the website
 # See > authors.yml
-author: phlow
+author: eric
 
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
-url: 'https://erex.github.io'
-baseurl: ''
+url: 'https://erex.github.io/'
+baseurl: 'feeling'
 
 # This is for the editing function in _/includes/improve_content
 # Leave it empty if your site is not on GitHub/GitHub Pages
