specify proper urlimg (no s in feeling)

--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ baseurl: '/feeling'
 # Example: <img src="{{ site.urlimg }}{{ post.image.title }}" />
 # Markdown-Example for posts ![Image Text]({{ site.urlimg }}image.jpg)
 #
-urlimg: 'https://erex.github.io/feelings/images/'
+urlimg: 'https://erex.github.io/feeling/images/'
 
 
 # Logo size is 600x80 pixels
