--- a/_data/network.yml
+++ b/_data/network.yml
@@ -1,4 +1,4 @@
-- menu_name: "Underlying website development tools"
+- menu_name: "Website development"
 
 - name: "Icons by Daniel Bruce"
   url: "http://entypo.com/"
