is there an s in https

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author: Eric
 
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
-url: 'http://workshops.distancesampling.org'
+url: 'https://workshops.distancesampling.org'
 baseurl: '/online-course-2018'
 
 # This is for the editing function in _/includes/improve_content
@@ -38,7 +38,7 @@ baseurl: '/online-course-2018'
 # Example: <img src="{{ site.urlimg }}{{ post.image.title }}" />
 # Markdown-Example for posts ![Image Text]({{ site.urlimg }}image.jpg)
 #
-urlimg: ' http://workshops.distancesampling.org/online-course-2018/images/'
+urlimg: ' https://workshops.distancesampling.org/online-course-2018/images/'
 
 
 # Logo size is 600x80 pixels
