--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author: Eric
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
 url: 'https://workshops.distancesampling.org'
-baseurl: '/online-course-2018'
+baseurl: '/online-course'
 
 # This is for the editing function in _/includes/improve_content
 # Leave it empty if your site is not on GitHub/GitHub Pages
@@ -38,7 +38,7 @@ baseurl: '/online-course-2018'
 # Example: <img src="{{ site.urlimg }}{{ post.image.title }}" />
 # Markdown-Example for posts ![Image Text]({{ site.urlimg }}image.jpg)
 #
-urlimg: ' https://workshops.distancesampling.org/online-course-2018/images/'
+urlimg: ' https://workshops.distancesampling.org/online-course/images/'
 
 
 # Logo size is 600x80 pixels
