--- a/_config.yml
+++ b/_config.yml
@@ -194,7 +194,7 @@ socialmedia:
 #
 # used in _includes/comments
 
-disqus_shortname: erex-github-io-online-course-2018
+disqus_shortname: distance-online
 
 
 #      _____
