Elsewhere on website Ch7 changes
Ch1, 3, 5, and 6 as well as syllabus plus navigation to make links to Ch7 content

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@
   side: left
 
 - title: "Preparing for course"
-  url: "/prep/"
+  url: "/alt-prep/"
   side: left
 
 - title: "Course material"
@@ -22,6 +22,8 @@
     url: "/syllabus/Chapter5"
   - title: "Additional topics"
     url: "/syllabus/Chapter6"
+  - title: "Analysis using R"
+    url: "/syllabus/Chapter7"
  
 - title: "Additional resources"
   url: "/more-resources/"
